--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
 
 body {
-  font-family:"Helvetica" "Ariel" sans-serif;
-}
-
-
-p, li {
-  line-height: "2.5"
-}
+  font-family:"Times New Roman" "Ariel" sans-serif;
