--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 
 body {
-  font-family: "Helvetica", "Arial", sans-serif;
+  font-family: "Times New Roman, "Arial" , sans-serif;
 }
 
 h2, h3 {
-  color:rgb(255,105,159)
+  color:rgb(103,105,159)
 }
