--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 
 body {
-  font-family: "Helvetica, "Arial", sans-serif;
+  font-family: "Helvetica", "Arial", sans-serif;
 }
 
 h2, h3 {
   color:rgb(103,105,159)
+}
+
+a: hover {
+  background-color: rgba(255, 0, 0, 0.5);
 }
