--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,16 @@ ul > li {
   list-style-type: circle;
 }
 
-abbr[title] {
-  text-decoration-color: rgb(69,105,159);
-  text-decoration-style: wavy;
+nav a {
+  color: rgb(207,181,59);
+}
+
+section {
+  margin-bottom: 16px;
+  padding: 16px;
+  background-color: rgb(128,0,0);
+}
+
+footer a {
+  color: #000;
 }
