--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ a: hover {
   background-color: rgba(255, 0, 0, 0.5);
 }
 
+h1 {
+  color: rgb(0, 51, 0);
+}
+
 h2, h3 {
   color:rgb(103,105,159)
 }
@@ -26,9 +30,14 @@ nav a {
 section {
   margin-bottom: 16px;
   padding: 16px;
-  background-color: rgb(128,0,0);
+  background-color: rgb(192,192,192);
 }
 
 footer a {
   color: #000;
+}
+
+#map {
+  background-color: rgba(69,105,159,0.15);
+  border: 1px solid rgb(69,105,159);
 }
