--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 
 body {
   font-family: "Helvetica", "Arial", sans-serif;
+  background-color: rgb(150,147,158);
 }
 
 a: hover {
@@ -8,7 +9,7 @@ a: hover {
 }
 
 h1 {
-  color: rgb(0, 51, 0);
+  color: rgb(50,40, 96);
 }
 
 h2, h3 {
@@ -30,7 +31,8 @@ nav a {
 section {
   margin-bottom: 16px;
   padding: 16px;
-  background-color: rgb(192,192,192);
+  background-color: rgb(239,239,238);
+  border: 3px solid rgb(61,93,154);
 }
 
 footer a {
@@ -38,6 +40,6 @@ footer a {
 }
 
 #map {
-  background-color: rgba(69,105,159,0.15);
-  border: 1px solid rgb(69,105,159);
+  background-color: rgb(206,206,208);
+  border: 3px solid rgb(69,105,159);
 }
