--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import 
+
 body {
   font-family: "Helvetica", "Arial", sans-serif;
   background-color: rgb(150,147,158);
@@ -42,4 +42,8 @@ footer a {
 #map {
   background-color: rgb(206,206,208);
   border: 3px solid rgb(69,105,159);
+}
+
+.first {
+  font-weight: bold;
 }
