--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-
+@import "ahaas195.github.io/css/jost/static/jost-bold.ttf";
 body {
-  font-family: "Helvetica", "Arial", sans-serif;
+  font-family: "jost", "Arial", sans-serif;
   background-color: rgb(150,147,158);
 }
 
@@ -42,12 +42,4 @@ footer a {
 #map {
   background-color: rgb(206,206,208);
   border: 3px solid rgb(69,105,159);
-}
-
-.first {
-  font-weight: bold;
-}
-
-.first::first-letter {
-  font-size: 22px;
 }
