--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-@import "ahaas195.github.io/css/jost/static/jost-bold.ttf";
+
 body {
-  font-family: "jost", "Arial", sans-serif;
+  font-family: "Helvetica", "Arial", sans-serif;
   background-color: rgb(150,147,158);
 }
 
