--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,31 @@ body {
   background-color: rgb(150,147,158);
 }
 
+body {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 20px;
+
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+header, footer {
+  grid-column: 1 / -1;
+  padding-left: 25px;
+  background-color: rgb(239,239,238);
+}
+
+header {
+  margin-top: 20px;
+}
+
 a: hover {
   background-color: rgba(255, 0, 0, 0.5);
 }
 
 h1 {
-  color: rgb(255,255,255);
+  color: rgb(106,90,205);
 }
 
 h2, h3 {
@@ -25,18 +44,27 @@ ul > li {
 }
 
 nav a {
-  color: rgb(255,240,235);
+  color: rgb(128,0,0);
 }
 
+nav {
+  background-color: rgb(239,239,238);
+  max-width: 200px;
+  max-height: 200px;
+}
 section {
   margin-bottom: 16px;
-  padding: 16px;
+  padding: 20px;
   background-color: rgb(239,239,238);
   border: 3px solid rgb(103,105,159);
 }
 
 footer a {
   color: #000;
+}
+
+#introduction {
+  max-width: 640px;
 }
 
 #map {
