--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,9 @@ header, footer {
   background-color: rgb(239,239,238);
 }
 
-
+footer {
+  margin-bottom: 20px;
+}
 
 header {
   margin-top: 20px;
