--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header, footer {
   grid-column: 1 / -1;
   padding-left: 25px;
   background-color: rgb(239,239,238);
+  border: 3px solid rgb(103,105,159);
 }
 
 footer {
@@ -55,6 +56,7 @@ nav {
   background-color: rgb(239,239,238);
   max-width: 200px;
   max-height: 150px;
+  border: 3px solid rgb(103,105,159);
 }
 section {
   margin-bottom: 16px;
