--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 body {
   font-family: "Helvetica", "Arial", sans-serif;
-  background-color: rgb(150,147,158);
+  background-color: rgb(169, 161, 140);
 }
 
 body {
@@ -17,7 +17,7 @@ header, footer {
   grid-column: 1 / -1;
   padding-left: 25px;
   background-color: rgb(239,239,238);
-  border: 3px solid rgb(103,105,159);
+  border: 3px solid rgb(78,97,114);
 }
 
 footer {
@@ -56,13 +56,13 @@ nav {
   background-color: rgb(239,239,238);
   max-width: 200px;
   max-height: 150px;
-  border: 3px solid rgb(103,105,159);
+  border: 3px solid rgb(78,97,114);
 }
 section {
   margin-bottom: 16px;
   padding: 20px;
   background-color: rgb(239,239,238);
-  border: 3px solid rgb(103,105,159);
+  border: 3px solid rgb(78,97,114);
 }
 
 footer a {
@@ -75,7 +75,7 @@ footer a {
 
 #map {
   background-color: rgb(239,239,238);
-  border: 3px solid rgb(103,105,159);
+  border: 3px solid rgb(78,97,114);
   max-width: 640px;
 }
 
