--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 header, footer {
   grid-column: 1 / -1;
   padding-left: 25px;
-  background-color: rgb(239,239,238);
+  background-color: #FFFFFF;
   border: 3px solid rgb(78,97,114);
 }
 
@@ -53,7 +53,7 @@ nav a {
 }
 
 nav {
-  background-color: rgb(239,239,238);
+  background-color: #FFFFFF;
   max-width: 200px;
   max-height: 150px;
   border: 3px solid rgb(78,97,114);
@@ -61,7 +61,7 @@ nav {
 section {
   margin-bottom: 16px;
   padding: 20px;
-  background-color: rgb(239,239,238);
+  background-color: #FFFFFF;
   border: 3px solid rgb(78,97,114);
 }
 
@@ -74,7 +74,7 @@ footer a {
 }
 
 #map {
-  background-color: rgb(239,239,238);
+  background-color: #FFFFFF);
   border: 3px solid rgb(78,97,114);
   max-width: 640px;
 }
