--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Quicksand:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Playfair+Display&family=Quicksand:wght@400;600&display=swap');
 
 body {
   font-family: "Helvetica", "Arial", sans-serif;
@@ -27,7 +27,6 @@ footer {
 
 header {
   margin-top: 20px;
-  font-family: "Quicksand", sans-serif;
 }
 
 a: hover {
@@ -45,6 +44,7 @@ h2, h3 {
 
 p, li {
   line-height: 1.5;
+  font-family: "Manrope";
 }
 
 ul > li {
