--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ a: hover {
 
 h1 {
   color: rgb(78,97,114);
+  font-family: "Quicksand Semibold600", sans-serif;
 }
 
 h2, h3 {
@@ -44,7 +45,7 @@ h2, h3 {
 
 p, li {
   line-height: 1.5;
-  font-family: "Manrope";
+  font-family: "Manrope", sans-serif;
 }
 
 ul > li {
