--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ a: hover {
 h1 {
   color: rgb(78,97,114);
   font-family: "Quicksand Semibold600", sans-serif;
+  margin-top: 30px;
 }
 
 h2, h3 {
@@ -50,6 +51,9 @@ p, li {
 
 ul > li {
   list-style-type: circle;
+  margin-left: 0px;
+  margin-bottom: 1px;
+  margin: 0px;
 }
 
 nav a {
@@ -59,8 +63,8 @@ nav a {
 
 nav {
   background-color: #FFFFFF;
-  max-width: 200px;
-  max-height: 170px;
+  max-width: 210px;
+  max-height: 160px;
   border: 3px solid rgb(78,97,114);
 }
 
