--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,12 @@ h1 {
   margin-top: 30px;
 }
 
-h2, h3 {
+h2 {
+  color:rgb(78,97,114);
+  font-family: "Quicksand Semibold600", sans-serif;
+}
+
+h3 {
   color:rgb(78,97,114);
   font-family: "Quicksand", sans-serif;
 }
