--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,33 @@ footer a {
 }
 
 #eth {
-  background-color: rgb(205, 210, 203);
-  max-width: 400px;
   position: relative;
-  left: 100px;
+  left: 200px;
+}
+
+#group {
+  position: relative;
+  right:50px;
+  top: 10px;
+}
+
+#percent {
+  position: relative;
+  left:50px;
+  top: 10px;
+}
+
+#pofp {
+    position: relative;
+    top: 10px;
+}
+
+#eg {
+  position: relative;
+  right:40px;
+  font-size: 16px;
+}
+
+table {
+
 }
