--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ footer a {
 
 
 #geography {
-  max-width: 960px; 
+  max-width: 960px;
 }
 
 
@@ -134,12 +134,23 @@ footer a {
 #demlist {
   position: relative;
   left: 150px;
+  background-color: rgb(205, 210, 203);
+  border: 3px solid rgb(255, 219, 206);
+  width: 360px;
+  height: 150px;
+  padding: 20px;
 }
 
 #demographic-profile {
   position: relative;
   top: 10px;
   margin-bottom: 30px;
+}
+
+.list {
+  position: relative;
+  top: 12px;
+  left: 20px;
 }
 
 .bottom {
