--- a/css/style-two.css
+++ b/css/style-two.css
@@ -24,5 +24,19 @@ a:hover {
 }
 
 a:link {
-  
+  color: rgb(255, 0, 0);
+}
+
+a:visited {
+  color: rgb(255, 0, 0);
+}
+
+a:focus {
+  border-bottom: 1px solid;
+  background: rgb(255, 0, 0);
+}
+
+a:active {
+  background: #265301;
+  color: rgb(255, 0, 0);
 }
