--- a/css/style-two.css
+++ b/css/style-two.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Helvetica", "Arial", sans-serif;
-  background-color: rgb(96,111,130);
+  background-color: #333333;
 }
 
 body {
