--- a/css/style-two.css
+++ b/css/style-two.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Helvetica", "Arial", sans-serif;
-  background-color: #333333;
+  background-color: rgb(203,145,144);
 }
 
 body {
@@ -16,7 +16,7 @@ header, footer {
   grid-column: 1 / -1;
   padding-left: 25px;
   background-color: #FFFFFF;
-  border: 3px solid rgb(67,75,86);
+  border: 3px solid rgb(87,76,78);
 }
 
 header {
@@ -68,7 +68,7 @@ section {
   margin-bottom: 16px;
   padding: 20px;
   background-color: #FFFFFF;
-  border: 3px solid rgb(67,75,86);
+  border: 3px solid rgb(238,230,216);
 }
 
 .intro {
