--- a/css/style-two.css
+++ b/css/style-two.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap')
+
 body {
   font-family: "Helvetica", "Arial", sans-serif;
   background-color: rgb(157,162,174);
@@ -64,6 +66,10 @@ h2 {
   font-size: 20px;
 }
 
+h3 {
+  color: rgb(41,50,66);
+}
+
 section {
   margin-bottom: 16px;
   padding: 20px;
@@ -95,6 +101,7 @@ nav {
   max-width: 150px;
   max-height: 100px;
   border: 3px solid rgb(67,75,86);
+  position: sticky;
 }
 
 img {
@@ -114,4 +121,11 @@ img {
   position: relative;
   left: 325px;
   bottom: 273px;
+}
+
+#favorite {
+  position: relative;
+  left: 200px;
+  font-size: 20px;
+
 }
