--- a/css/style-two.css
+++ b/css/style-two.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
 body {
   font-family: "Helvetica", "Arial", sans-serif;
@@ -57,6 +57,8 @@ a:active {
 
 h1 {
   color: rgb(41,50,66);
+  font-family: "Oxygen", "Helvetica", "Arial", sans-serif;
+  font-weight: 700;
   margin-top: 30px;
   font-size: 30px;
 }
