--- a/css/style-two.css
+++ b/css/style-two.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Oxygen:wght@300;400;700&display=swap');
 
 body {
   font-family: "Helvetica", "Arial", sans-serif;
@@ -86,6 +86,10 @@ section {
   border: 3px solid rgb(45,45,43);
 }
 
+.famous {
+  font-family: "Handlee", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+}
 .intro {
   position: relative;
   right:90px;
