--- a/css/style-two.css
+++ b/css/style-two.css
@@ -87,12 +87,13 @@ section {
 }
 
 .famous {
-  font-family: "Handlee", "Helvetica", "Arial", sans-serif;
-  font-weight: 400;
+  font-family: "Oxygen", "Helvetica", "Arial", sans-serif;
+  font-weight: 300;
   font-size: 18px;
   position: relative;
   left: 150px;
   top: 10px;
+  line-height: 1.5;
 }
 
 .intro {
@@ -159,6 +160,21 @@ img {
 }
 
 #first-source {
+  font-size: 10px;
+  position: relative;
+  top: 10px;
+}
+
+#why {
+  font-family: "Handlee", "Helvetica", "Arial", sans-serif;
+  font-size: 20px;
+  line-height: 2;
+  position: relative;
+  left: 100px;
+}
+
+#romantic {
+  font-size: 10px;
   position: relative;
   top: 10px;
 }
