--- a/css/style-two.css
+++ b/css/style-two.css
@@ -184,3 +184,13 @@ img {
   left: 200px;
   bottom: 37px;
 }
+
+#fb {
+  position: relative;
+  left: 400px;
+  bottom: 74px;
+}
+
+#contact {
+  max-height: 100px;
+}
