--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,4 +17,9 @@
     max-width: 414px;
   }
 
+}nav {
+  background-color: #FFFFFF;
+  max-width: 150px;
+  max-height: 100px;
+  border: 3px solid rgb(67,75,86);
 }
