--- a/css/mobile.css
+++ b/css/mobile.css
@@ -22,4 +22,10 @@
   max-width: 150px;
   max-height: 100px;
   border: 3px solid rgb(67,75,86);
+
+  #why {
+    font-family: "Handlee", "Helvetica", "Arial", sans-serif;
+    font-size: 20px;
+    line-height: 2;
+  }
 }
