--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,13 +17,14 @@
     max-width: 414px;
   }
 
-}nav {
+nav {
   background-color: #FFFFFF;
   max-width: 150px;
   max-height: 100px;
   border: 3px solid rgb(67,75,86);
+}
 
-  #why {
+  #why{
     font-family: "Handlee", "Helvetica", "Arial", sans-serif;
     font-size: 20px;
     line-height: 2;
