--- a/css/mobile.css
+++ b/css/mobile.css
@@ -28,5 +28,6 @@ nav {
     font-family: "Handlee", "Helvetica", "Arial", sans-serif;
     font-size: 20px;
     line-height: 2;
+    position: fixed;
   }
 }
