--- a/css/style-two.css
+++ b/css/style-two.css
@@ -167,6 +167,7 @@ img {
 
 #why {
   font-family: "Oxygen", "Helvetica", "Arial", sans-serif;
+  font-weight: 300;
   line-height: 2;
   position: relative;
   left: 100px;
